<resources>
    <string name="app_name">ConvertisseurDevise</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donnez_le_montant_a_convertir">Donnez le montant a convertir</string>
    <string name="montant">montant</string>
    <string name="de">De</string>
    <string name="vers">Vers</string>
    <string name="convertir">Convertir</string>
    <string name="convertisseur_de_devise">Convertisseur de Devise</string>
</resources>